--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "editor.fontSize": 14,
-    "python.pythonPath": "C:\\Users\\CuongVTC\\AppData\\Local\\Programs\\Python\\Python36\\python.exe",
+    "python.pythonPath": "C:\\Program Files (x86)\\Python37-32\\python.exe",
     "python.jediEnabled": false,
     "python.linting.pep8Enabled": false,
     "python.linting.enabled": true,
@@ -10,5 +10,6 @@
     ],
     "python.autoComplete.extraPaths": [
         "C:\\Users\\CuongVTC\\.vscode\\ironpython-stubs-master\\release\\stubs.min"
-    ]
+    ],
+    "python.linting.pylintEnabled": true
 }
