--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,15 @@
     "python.autoComplete.extraPaths": [
         "C:\\Users\\CuongVTC\\.vscode\\ironpython-stubs-master\\release\\stubs.min"
     ],
-    "python.linting.pylintEnabled": true
+    "python.linting.pylintEnabled": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "*test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.unittestEnabled": true
 }
